--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
-Space/Dotnet/
+# Dotnet Space Ignore
+Space/Dotnet/Program.cs
+Space/Dotnet/bin/Debug/netcoreapp3.1/Dotnet.dll
+Space/Dotnet/bin/Debug/netcoreapp3.1/Dotnet.pdb
+Space/Dotnet/obj/Debug/netcoreapp3.1/Dotnet.dll
+Space/Dotnet/obj/Debug/netcoreapp3.1/Dotnet.pdb
