--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
-    "python.pythonPath": "/usr/bin/python3",
-    "files.associations": {
-        "ostream": "cpp"
-    }
+  "python.pythonPath": "/usr/bin/python3",
+  "files.associations": {
+    "ostream": "cpp"
+  },
+  "python.analysis.typeCheckingMode": "basic"
 }
