add: python 개별 세팅

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,10 @@
     "ostream": "cpp"
   },
   "python.analysis.typeCheckingMode": "basic",
-  "python.formatting.provider": "yapf"
+  "python.formatting.provider": "yapf",
+
+  "[python]": {
+    "editor.insertSpaces": true,
+    "editor.tabSize": 4
+  }
 }
